Alarm every 5 minutes

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,3 @@
 <resources>
-    <string name="app_name">Set Repetitive Exact Alarm</string>
+    <string name="app_name">Set Alarm</string>
 </resources>
